@@ -1,3 +1,9 @@
+Tue Jul 20 18:22:02 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * examples/Hello/descriptors/run_test_shs.pl:
+
+          Simple test that loads the SHS daemon.
+
 Tue Jul 20 18:19:34 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
